--- a/my projict/ecommerce_marketplace/requirements.txt
+++ b/my projict/ecommerce_marketplace/requirements.txt
@@ -1,10 +1,10 @@
-Flask==2.0.1
-pymongo==3.12.0
-Flask-Login==0.5.0
-Flask-WTF==0.15.1
-Werkzeug==2.0.1
-python-dotenv==0.19.0
-Pillow==8.3.1
-bcrypt==3.2.0
-email-validator==1.1.3
-gunicorn==20.1.0
+Flask
+pymongo
+Flask-Login
+Flask-WTF
+Werkzeug
+python-dotenv
+Pillow
+bcrypt
+email-validator
+gunicorn
